# as2_platform_pixhawk

./: .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  compile_commands.json  dependencies.repos  launchtest.bash  package.xml
.cache/clangd/index/: pixhawk_platform.cpp.9AC610D67E1032E5.idx  pixhawk_platform.cpp.FAF26BE3D14FD66E.idx  pixhawk_platform.hpp.48A7CAD1248D1A04.idx  pixhawk_platform.hpp.69671C52D41C138C.idx  pixhawk_platform_main.cpp.96332C1E6D806C9D.idx  pixhawk_platform_main.cpp.F128D4B06B7C9D11.idx
.github/workflows/: build-humble.yaml  build_jazzy.yaml
config/: control_modes.yaml  pixhawk_platform.yaml  platform_config_file.yaml  platform_default.yaml
include/: pixhawk_platform.hpp
include/as2_platform_pixhawk/: pixhawk_platform.hpp
include/pixhawk_platform/: pixhawk_platform.hpp
launch/: pixhawk_launch.py  pixhawk_platform_launch.py
src/: pixhawk_platform.cpp  pixhawk_platform_main.cpp  pixhawk_platform_node.cpp
tests/: pixhawk_platform_test.cpp  px4_odom_test.cpp
tests/pixhawk_control_mode/: main.py
